...
                android:scaleType="fitXY"
                app:srcCompat="@drawable/poster_a_start_is_born" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:maxLines="2"
...
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/overviewTV"
            app:layout_constraintVertical_bias="0.0" />

        <com.sackcentury.shinebuttonlib.ShineButton
            android:id="@+id/favoriteBT"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:allow_random_color="false"
            app:big_shine_color="#FF6666"
...
