<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progressBar"
        style="@style/SpinKitView.DoubleBounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:visibility="gone"
        app:SpinKit_Color="@android:color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoriteMovieRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/noFavoriteLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/lottie"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="64dp"
            android:text="@string/no_favorite" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:lottie_autoPlay="true"
            app:lottie_fileName="no_favorite.json"
            app:lottie_loop="true" />

    </RelativeLayout>

</RelativeLayout>