...
            app:tabTextAppearance="@style/MainTab"
            app:tabTextColor="@color/inactive" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/margin_within_object"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

...
